--- a/CampusNexus/src/main/resources/application.properties
+++ b/CampusNexus/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+mailjet.api-key=2c816ac7495577dfd669e3a8865de006
+mailjet.secret-key=4bc90302735b25f18b4a726ac87a66b7
+mailjet.from-email=your_registered_email@domain.com
+mailjet.from-name=CampusNexus
